--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,27 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-analytics.js"></script>
+    <script>
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: "AIzaSyA2CnRlVDBhw-Oj2_k_-sJ8WpOwd1xq-Uc",
+        authDomain: "whatsapp-623f4.firebaseapp.com",
+        projectId: "whatsapp-623f4",
+        storageBucket: "whatsapp-623f4.appspot.com",
+        messagingSenderId: "14934064206",
+        appId: "1:14934064206:web:595ffcb226cd25ae47171f",
+        measurementId: "G-BJTN9TPTZY"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+    </script>
   </body>
 </html>
